apps/blocky/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blocky
  namespace: network-services
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: blocky
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - ipBlock: {cidr: 192.168.1.0/24}
        - ipBlock: {cidr: 10.8.0.0/24}
      ports:
        - {port: 53, protocol: TCP}
        - {port: 53, protocol: UDP}
    - from:
        - namespaceSelector:
            matchLabels: {kubernetes.io/metadata.name: kube-system}
          podSelector:
            matchLabels: {k8s-app: kube-dns}
      ports:
        - {port: 53, protocol: TCP}
        - {port: 53, protocol: UDP}
    - from:
        - namespaceSelector:
            matchLabels: {kubernetes.io/metadata.name: monitoring}
          podSelector:
            matchLabels: {app.kubernetes.io/name: prometheus}
        - ipBlock: {cidr: 10.42.0.0/16}
      ports:
        - {port: 4000, protocol: TCP}
  egress:
    - to:
        - ipBlock: {cidr: 8.8.8.8/32}
        - ipBlock: {cidr: 8.8.4.4/32}
      ports:
        - {port: 53, protocol: TCP}
        - {port: 53, protocol: UDP}
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except: [10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16]
      ports:
        - {port: 443, protocol: TCP}
